@@ -1,3 +1,8 @@
+2004-12-15  Karl Berry  <karl@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): include ChangeLog.46, README.dev,
+	and po/Makevars.template.  From Stepan.
+
 2004-12-14  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (inforef): try to explain possible uses more
